@@ -1311,14 +1311,18 @@ sw_size_alloc_cb(GtkWidget * window, GtkAllocation * alloc)
 {
     GdkWindow *gdk_window;
 
-    if (!(gdk_window = gtk_widget_get_window(window)))
+    gdk_window = gtk_widget_get_window(window);
+    if (gdk_window == NULL)
         return;
 
-    if (!(balsa_app.sw_maximized = gdk_window_get_state(gdk_window)
-          & GDK_WINDOW_STATE_MAXIMIZED)) {
-        balsa_app.sw_height = alloc->height;
-        balsa_app.sw_width  = alloc->width;
-    }
+    balsa_app.sw_maximized =
+        (gdk_window_get_state(gdk_window) &
+         (GDK_WINDOW_STATE_MAXIMIZED | GDK_WINDOW_STATE_FULLSCREEN)) != 0;
+
+    if (!balsa_app.sw_maximized)
+        gtk_window_get_size(GTK_WINDOW(window),
+                            & balsa_app.sw_width,
+                            & balsa_app.sw_height);
 }
 
 
